Uppdaterad Seleri-sajt med senaste förbättringar

--- a/index.html
+++ b/index.html
@@ -463,6 +463,11 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+    <script>pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';</script>
+    <script src="secrets.js"></script>
+    <script src="system-prompt.js"></script>
+    <script src="azure_integration.js"></script>
     <script src="script.js"></script>
 </body>
 
